<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:checkedButton="@id/single_game_radio_button" >

        <RadioButton android:id="@+id/single_game_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/single_game" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/chess_match" />
    </RadioGroup>

    <TextView android:id="@+id/game_time_text"
        style="@style/SettingsText"
        android:text="@string/game_time" />

    <SeekBar android:id="@+id/game_time_seek_bar"
        style = "@style/SettingsSeekBar" />

    <TextView android:id="@+id/increment_text"
        style="@style/SettingsText"
        android:text="@string/increment" />

    <SeekBar android:id="@+id/increment_seek_bar"
        style = "@style/SettingsSeekBar" />

    <CheckBox android:id="@+id/different_time_checkbox"
        style="@style/SettingsText"
        android:text="@string/different_time" />

    <TextView android:id="@+id/game_time_two_text"
        style="@style/SettingsText"
        android:text="@string/game_time_two" />

    <SeekBar android:id="@+id/game_time_two_seek_bar"
        style = "@style/SettingsSeekBar" />

    <TextView android:id="@+id/increment_two_text"
        style="@style/SettingsText"
        android:text="@string/increment_two" />

    <SeekBar android:id="@+id/increment_two_seek_bar"
        style = "@style/SettingsSeekBar" />

    <TextView android:id="@+id/games_text"
        style="@style/SettingsText"
        android:text="@string/number_of_games" />

    <SeekBar android:id="@+id/games_seek_bar"
        style = "@style/SettingsSeekBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/play_button"
            android:background="@drawable/settings_button" />

        <Button android:id="@+id/customize_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/customize_button"
            android:background="@drawable/settings_button" />

    </LinearLayout>


</LinearLayout>