<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/match_settings_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:checkedButton="@id/single_game_radio_button" >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/single_game_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/single_game" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/chess_match_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chess_match" />
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_game_time_one"
                style="@style/SettingsText"
                android:text="@string/game_time" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sl_game_time_one"
                android:contentDescription="@string/slider_game_time_one"
                style = "@style/SettingsSeekBar"
                android:valueFrom="1.0"
                android:valueTo="60.0"
                android:stepSize="1.0"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_increment_one"
                style="@style/SettingsText"
                android:text="@string/increment" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sl_increment_one"
                android:contentDescription="@string/slider_increment_one"
                style = "@style/SettingsSeekBar"
                android:valueFrom="0.0"
                android:valueTo="60.0"
                android:stepSize="1.0"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/different_time_checkbox"
                style="@style/SettingsText"
                android:layout_marginBottom="4dp"
                android:text="@string/different_time" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_game_time_two"
                style="@style/SettingsText"
                android:text="@string/game_time_two"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/sl_game_time_two"
                style = "@style/SettingsSeekBar"
                android:valueFrom="1.0"
                android:valueTo="60.0"
                android:stepSize="1.0"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_increment_two"
                style="@style/SettingsText"
                android:text="@string/increment_two"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/sl_increment_two"
                style = "@style/SettingsSeekBar"
                android:valueFrom="0.0"
                android:valueTo="60.0"
                android:stepSize="1.0"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_number_of_games"
                style="@style/SettingsText"
                android:text="@string/number_of_games"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/sl_number_of_games"
                style = "@style/SettingsSeekBar"
                android:valueFrom="2.0"
                android:valueTo="30.0"
                android:stepSize="1.0"
                android:visibility="gone"
                tools:visibility="visible"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>