<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="24dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/blackColor"
            android:text="@string/match_name"/>

        <EditText android:id="@+id/match_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:textSize="16sp"
            android:inputType="text" />
    </LinearLayout>

    <TextView android:id="@+id/number_of_games_dialog"
        style = '@style/SettingsText'
        android:text="@string/number_of_games"/>

    <SeekBar android:id="@+id/number_of_games_bar"
        style = "@style/SettingsSeekBar"
        android:max="28"/> <!-- range 2-30 -->

</LinearLayout>