<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingHorizontal="24dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_match_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/match_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_match_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView android:id="@+id/tv_number_of_games"
        style = "@style/SettingsText"
        android:text="@string/number_of_games"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/sl_number_of_games"
        android:contentDescription="@string/slider_number_of_games"
        style = "@style/SettingsSlider"
        android:valueFrom="2.0"
        android:valueTo="30.0"
        android:stepSize="1.0"
        android:value="5.0"/>

</LinearLayout>