<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    grid:columnCount="3"
    grid:alignmentMode="alignBounds"
    tools:context=".TimerActivity" >

    <TextView android:id="@+id/points_text_rotated"
        style = "@style/TimerTextView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:rotation="180"
        android:text="@string/points"/>

    <Button android:id="@+id/move_button_rotated"
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:layout_marginTop="16dp"
        android:rotation="180"
        android:background="@drawable/timer_black_button"
        android:textColor="@color/whiteColor"
        android:text="@string/move_number" />

    <TextView android:id="@+id/game_number_text_rotated"
        style = "@style/TimerTextView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:rotation="180"
        android:text="@string/game_number"/>

    <TextView android:id="@+id/timer_text_rotated"
        style = "@style/TimerTimeTextView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_columnSpan="3"
        android:gravity="top|center_horizontal"
        android:rotation="180"
        android:text="@string/time" />

    <TextView android:id="@+id/first_move_text_rotated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_columnSpan="3"
        android:gravity="bottom|center_horizontal"
        android:rotation="180"
        android:text="@string/first_move_text"/>

    <Button android:id="@+id/resign_button_rotated"
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:rotation="180"
        android:background="@drawable/timer_black_button"
        android:textColor="@color/whiteColor"
        android:text="@string/resign"/>

    <TextView
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1" />

    <ToggleButton android:id="@+id/draw_button_rotated"
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:rotation="180"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/timer_black_button"
        android:textColor="@color/whiteColor"
        android:textOff="@string/draw_offer"
        android:textOn="@string/draw_offer"/>

    <TextView
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="5"/>

    <Button android:id="@+id/new_game_button"
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="5"
        android:layout_margin="20dp"
        android:background="@drawable/settings_button"
        android:text="@string/new_game"/>

    <TextView
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="5"/>

    <ToggleButton android:id="@+id/draw_button"
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:background="@drawable/timer_white_button"
        android:textColor="@color/blackColor"
        android:textOff="@string/draw_offer"
        android:textOn="@string/draw_offer"/>

    <TextView
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"/>

    <Button android:id="@+id/resign_button"
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:background="@drawable/timer_white_button"
        android:textColor="@color/blackColor"
        android:text="@string/resign"/>

    <TextView android:id="@+id/first_move_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_columnSpan="3"
        android:gravity="bottom|center_horizontal"
        android:text="@string/first_move_text"/>

    <TextView android:id="@+id/timer_text"
        style = "@style/TimerTimeTextView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        grid:layout_columnSpan="3"
        android:gravity="top|center_horizontal"
        android:text="@string/time"/>

    <TextView android:id="@+id/game_number_text"
        style = "@style/TimerTextView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:text="@string/game_number"/>

    <Button android:id="@+id/move_button"
        style = "@style/TimerView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:layout_marginBottom="16dp"
        android:background="@drawable/timer_white_button"
        android:textColor="@color/blackColor"
        android:text="@string/move_number"/>

    <TextView android:id="@+id/points_text"
        style = "@style/TimerTextView"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:text="@string/points"/>

</android.support.v7.widget.GridLayout>