<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:layout_marginHorizontal="16dp"
    android:paddingVertical="4dp">
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        
        <TextView android:id="@+id/custom_match_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"
            android:textColor="@color/blackColor"
            tools:text="Name example"/>

        <TextView android:id="@+id/custom_match_games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/number_of_games"/>
        
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit"
            android:contentDescription="@string/icon_button_edit"
            style="@style/ControlIconButton"
            app:icon="@drawable/ic_edit"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            android:contentDescription="@string/icon_button_delete"
            style="@style/ControlIconButton"
            app:icon="@drawable/ic_delete"/>

    </LinearLayout>

</LinearLayout>